@@ -185,6 +185,8 @@ Bugfixes:
   tracing mode.
 - The instrumenter now identifies the file suffixes `.cuf` and `.CUF`
   as CUDA Fortran files.
+- Avoid creating group/communicator/window definitions with no members
+  and no global paradigm group. This affects the CUDA adapter.
 
 ------------------- Released version 8.4 -----------------------------
 
